--- a/MSAzureServicesExamples/MSAzureServicesExamples.Android/MSAzureServicesExamples.Android.csproj
+++ b/MSAzureServicesExamples/MSAzureServicesExamples.Android/MSAzureServicesExamples.Android.csproj
@@ -57,6 +57,9 @@
     <PackageReference Include="Prism.Unity.Forms">
       <Version>7.0.0.396</Version>
     </PackageReference>
+    <PackageReference Include="StackExchange.Redis">
+      <Version>1.2.6</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2" />
