--- a/MSAzureServicesExamples/MSAzureServicesExamples.iOS/MSAzureServicesExamples.iOS.csproj
+++ b/MSAzureServicesExamples/MSAzureServicesExamples.iOS/MSAzureServicesExamples.iOS.csproj
@@ -156,6 +156,9 @@
     <PackageReference Include="Prism.Unity.Forms">
       <Version>7.0.0.396</Version>
     </PackageReference>
+    <PackageReference Include="StackExchange.Redis">
+      <Version>1.2.6</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
