--- a/MSAzureServicesExamples/MSAzureServicesExamples.Android/MSAzureServicesExamples.Android.csproj
+++ b/MSAzureServicesExamples/MSAzureServicesExamples.Android/MSAzureServicesExamples.Android.csproj
@@ -60,6 +60,9 @@
     <PackageReference Include="StackExchange.Redis">
       <Version>1.2.6</Version>
     </PackageReference>
+    <PackageReference Include="WindowsAzure.Storage">
+      <Version>9.3.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2" />
