--- a/MSAzureServicesExamples/MSAzureServicesExamples.iOS/MSAzureServicesExamples.iOS.csproj
+++ b/MSAzureServicesExamples/MSAzureServicesExamples.iOS/MSAzureServicesExamples.iOS.csproj
@@ -159,6 +159,9 @@
     <PackageReference Include="StackExchange.Redis">
       <Version>1.2.6</Version>
     </PackageReference>
+    <PackageReference Include="WindowsAzure.Storage">
+      <Version>9.3.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
